# KP-Backend

./: .env.example  .flake8  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  pyproject.toml
.agents/rules/: architecture-rules.md  code-style-guide.md  documentation-rules.md  reliability-rules.md
.agents/skills/: skills.md
.github/workflows/: deploy.yml  python-app.yml
app/: main.py
app/api/: health_route.py  routes.py  schemas.py
app/api/v1/: jobs.py  router.py  scrape.py  sinta_articles.py  sinta_authors.py
app/api/v1/routes/: ping_route.py
app/core/: config.py  database.py  health.py  schema.py  security.py  server.py
app/models/: __init__.py  article.py  author.py  job.py  raw_response.py  sinta_article.py  sinta_author.py  work.py
app/services/: __init__.py  health.py  job_service.py  scheduler_service.py  scraping_service.py
app/services/scraper/: __init__.py  base.py  crossref.py  crossref_article.py  openalex.py  sinta.py  sinta_article.py  sinta_author.py  utils.py
database/: schema.sql
database/migrations/: add_source_column.sql
mysql-init/: 01-schema.sql  02-user.sql
nginx/: backend.conf
tests/: test_config.py  test_job_model.py  test_scheduler_service.py  test_schema.py
