[project]
name = "kp-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
